# gpkit-core

./: .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  catalog.toml  linecount.sh  pyproject.toml
.github/: release.yml
.github/workflows/: lint.yml  publish.yml  pylint.yml  tests.yml
docs/source/: advancedcommands.rst  debugging.rst  examples.rst  gettingstarted.rst  installation.rst  model_inventory.md  modeling_conventions.md  releasenotes.rst  visint.rst
docs/source/examples/: autosweep_output.txt  beam.py  beam_output.txt  bemt_hover_output.txt  debug.py  debug_output.txt  docstringparsing_output.txt  evaluated_fixed_variables.py  evaluated_free_variables.py  external_sp_output.txt  fuel_burn_output.txt  gettingstarted.py  gettingstarted_output.txt  gp_textbook_output.txt  growth_allowance_output.txt  issue_1513.py  issue_1513_output.txt  issue_1522_output.txt  migp.py  migp_output.txt  model_var_access.py  model_var_access_output.txt  performance_modeling.py  performance_modeling_output.txt  plot_sweep1d.py  relaxation.py  relaxation_output.txt  simple_box_output.txt  simple_sp.py  simple_sp_output.txt  simpleflight.py  simpleflight_output.txt  sin_approx_example_output.txt  (+6 more)
gpkit/: __init__.py  ast_nodes.py  breakdowns.py  budgets.py  build.py  exceptions.py  globals.py  ir.py  keydict.py  margin_objective.py  model.py  printing.py  report.py  solution_array.py  solution_ensemble.py  solutions.py  units.py  var.py  varkey.py  varmap.py
gpkit/constraints/: __init__.py  array.py  bounded.py  costed.py  growth.py  loose.py  relax.py  set.py  single_equation.py  tight.py
gpkit/examples/: beam.py  bemt_hover.py  boundschecking.py  breakdowns.py  external_constraint.py  external_sp.py  fuel_burn.py  gettingstarted.py  gp_textbook.py  growth_allowance.py  issue_1513.py  model_var_access.py  performance_modeling.py  simple_box.py  simpleflight.py  treemap.py  uav.py  vectorization.py  vectorize.py  water_tank.py
gpkit/interactive/: plot_sweep.py  plotting.py  sankey.py  widgets.py
gpkit/nomials/: __init__.py  array.py  constraints.py  core.py  data.py  growth.py  map.py  math.py  substitution.py  variables.py
gpkit/programs/: gp.py  prog_factories.py  sgp.py
gpkit/solvers/: cvxopt.py  mosek_cli.py  mosek_conif.py
gpkit/tests/: __init__.py  conftest.py  helpers.py  run_tests.py  t_constraints.py  t_examples.py  t_keydict.py  t_model.py  t_nomials.py  t_small.py  t_solution.py  t_solution_array.py  t_sub.py  t_tools.py  t_util.py  t_varmap.py  t_vars.py  t_varset.py  test_budgets.py  test_catalog.py  test_constraints.py  test_examples.py  test_growth.py  test_ir.py  test_ir_model_tree.py  test_margin_objective.py  test_model.py  test_model_graph.py  test_nomial_array.py  test_nomials.py  test_report.py  test_report_descriptions.py  test_solution.py  test_sub.py  test_toml_expr.py  test_toml_parser.py  test_toml_printer.py  test_toml_subs.py  test_tools.py  test_util.py  (+2 more)
gpkit/toml/: __init__.py  _expr.py  _parser.py  _printer.py  _subs.py
gpkit/tools/: autosweep.py
gpkit/util/: build.py  docstring.py  globals.py  repr_conventions.py  small_classes.py  small_scripts.py
scripts/: regen_examples.py
(+7 files in other folders)
