[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "gpkit-core"
readme = "README.md"
description = "Package for defining and manipulating geometric programming models."
authors = [
    { name = "Warren Hoburg", email = "whoburg@alum.mit.edu" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.16.4",
    "pint>=0.8.1",
    "plotly>=5.3.0",
    "scipy>=1.7.0",
    "adce>=1.3.2",
    "cvxopt>=1.1.8",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
lint = [
    "isort>=5.12.0",
    "black>=26.1.0",
    "flake8>=7.0.0",
    "pylint>=4.0.0",
    "import-linter>=2.3",
]
test = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://www.github.com/beautifulmachines/gpkit-core"

[tool.hatch.version]
path = "gpkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["gpkit"]

[tool.pytest.ini_options]
testpaths = ["gpkit/tests"]
python_files = ["test_*.py", "t_*.py"]
addopts = "-v --tb=short"
markers = [
    "solver: marks tests that require a solver",
    "cvxopt: marks tests that require cvxopt",
    "mosek: marks tests that require mosek",
]
