[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "gpkit-core"
readme = "README.md"
description = "Package for defining and manipulating geometric programming models."
authors = [
    { name = "Warren Hoburg", email = "whoburg@alum.mit.edu" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.16.4",
    "pint>=0.8.1",
    "plotly>=5.3.0",
    "scipy>=1.7.0",
    "adce>=1.3.2",
    "cvxopt>=1.1.8",
    "matplotlib>=3.3.0",
]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = [
    "isort>=5.12.0",
    "black>=26.1.0",
    "flake8>=7.0.0",
    "pylint>=4.0.0",
    "import-linter>=2.3",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://www.github.com/beautifulmachines/gpkit-core"

[tool.hatch.version]
path = "gpkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["gpkit"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["gpkit/tests"]
python_files = ["test_*.py", "t_*.py"]
addopts = "-v --tb=short"
markers = [
    "solver: marks tests that require a solver",
    "cvxopt: marks tests that require cvxopt",
    "mosek: marks tests that require mosek",
]

[tool.coverage.run]
source = ["gpkit"]
omit = ["gpkit/tests/*"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
